--- a/config/site-config.json
+++ b/config/site-config.json
@@ -57,7 +57,9 @@
         { "title": "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", "link": "Book/Icanbewrong.html" },
         { "title": "공감은 지능이다 - 자밀자키", "link": "Book/TheWarforKindness.html" },
         { "title": "듀얼브레인 - 이선몰릭", "link": "Book/dualbrain.html" },
-        { "title": "고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", "link": "Book/gojun.html" }
+        { "title": "고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", "link": "Book/gojun.html" },
+        { "title": "미술 - 아트", "link": "Book/art.html" },
+        { "title": "고전이 답했다 2 - 고명환", "link": "Book/gojun2.html" }
       ]
     },
     {
