--- a/config/site-config.json
+++ b/config/site-config.json
@@ -59,7 +59,10 @@
         { "title": "듀얼브레인 - 이선몰릭", "link": "Book/dualbrain.html" },
         { "title": "고전이 답했다 마땅히 살아야 할 삶에 대하여 - 고명환", "link": "Book/gojun.html" },
         { "title": "뇌가 힘들 땐 미술관에 가는 게 좋다. - 수전 매그새먼", "link": "Book/art.html" },
-        { "title": "고전이 답했다 마땅히 가져야 할 부에 대하여 - 고명환", "link": "Book/gojun2.html" }
+        { "title": "고전이 답했다 마땅히 가져야 할 부에 대하여 - 고명환", "link": "Book/bu.html" }
+        { "title": "편안함의 습격 - 마이클 이스터", "link": "Book/comfortcrisis.html" },
+        { "title": "뇌가 힘들 땐 미술관에 가는 게 좋다. - 수전 매그새먼", "link": "Book/misul.html" },
+        {"title": "나는 왜 마음 놓고 쉬지 못할까 - 김은영", "link": "Book/suim.html" }
       ]
     },
     {
@@ -91,7 +94,8 @@
         { "title": "순두부국", "link": "Life/soondooboo.html" },
         { "title": "시금치나물", "link": "Life/sigmchi.html" },
         { "title": "숙주나물", "link": "Life/sukjoo.html" },
-        { "title": "미역국", "link": "Life/miyuk.html" }
+        { "title": "미역국", "link": "Life/miyuk.html" },
+        { "title": "야미야미 덮밥", "link": "/Life/dubbab.html" }
       ]
     },
     {
