팔란티어 서평

--- a/config/site-config.json
+++ b/config/site-config.json
@@ -53,6 +53,7 @@
         { "title": "Dual Brain", "link": "Book/dualbrain.html" },
         { "title": "Gojun", "link": "Book/gojun.html" },
         { "title": "Art", "link": "Book/art.html" },
+        { "title": "Palantir Era", "link": "Book/palantir.html" },
         { "title": "Bu", "link": "Book/bu.html" },
         { "title": "Gojun 2", "link": "Book/gojun2.html" },
         { "title": "Comfort Crisis", "link": "Book/comfortcrisis.html" },
