레시피 추가

--- a/config/site-config.json
+++ b/config/site-config.json
@@ -93,7 +93,10 @@
         { "title": "Spinach Namul", "link": "Life/sigmchi.html" },
         { "title": "Bean Sprout Soup", "link": "Life/sukjoo.html" },
         { "title": "Seaweed Soup", "link": "Life/miyuk.html" },
-        { "title": "Dubbab", "link": "Life/dubbab.html" }
+        { "title": "Dubbab", "link": "Life/dubbab.html" },
+        { "title": "Aehobak Namul", "link": "Life/aehobak.html" },
+        { "title": "Jinmichae Bokkeum", "link": "Life/jinmichae.html" },
+        { "title": "Altari Kimchi", "link": "Life/altarikimchi.html" }
       ]
     },
     {
